# wana_kana_rust

./: Cargo.toml
src/: lib.rs  to_ukrainian.rs  to_ukrainian_node_tree.rs  traits.rs
wana_kana_wasm/: Cargo.toml
